# personal-llm-wiki

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  eslint.config.js  index.md  log.md  package.json  persona.example.md  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: lint-public.yml
bridge/: .env.example  README.md  app.py  engine.py  pyproject.toml  ru.secondbrain.bridge.plist  store.py  telegram.py
compiler/: relevance-policy.md  rules.md
docs/adr/: 0001-engine-subscription-codex.md  0002-no-embedder-pure-karpathy.md  0003-two-repos-public-private.md  0004-telegram-bridge-reactive-proactive.md  0005-host-v1-macbook-portable.md  0006-github-account-kengston.md  0007-engine-spawn-and-scheduler.md  0008-engine-claude-native.md  0009-tos-safe-engine-access.md  0010-wiki-content-model.md  0011-relevance-sensitivity-filter.md  0012-language-typescript-port.md  0013-pii-density-valid-phones.md  0014-telegram-transport-long-polling.md  0015-capture-write-path-permission-posture.md  0016-bot-persona-configurable-system-prompt.md  README.md  (+11 more)
ingest/: README.md  __init__.py  classifier.py  codebase_graphify.py  llm_chat.py  sanitizer.py  telegram_export.py  vk.py  watermark.py  whatsapp.py  x_archive.py  youtube_takeout.py
scheduler/: README.md  digest.py  lint_public.py  reminders.py  reminders_spec.md  routines.py  ru.secondbrain.digest.plist  run_routine.sh  run_sweep.sh
scripts/: finance-smoke.mjs
setup/: SETUP.md
wiki-example/: capability-profile.md  index.md  log.md
(+111 files in other folders)
