[project]
name = "secondbrain-bridge"
version = "0.1.0"
description = "Тонкий мост Telegram <-> движок (дефолт Claude Code) для личного «Второго мозга» (personal LLM-wiki)"
readme = "README.md"
requires-python = ">=3.11"
# Зависимости намеренно минимальны: тонкий мост (~webhook + subprocess + Bot API).
# Telegram дёргаем сырым httpx (без aiogram) — см. docs/research/telegram-interface.md.
dependencies = [
    "fastapi>=0.115",       # HTTP-приложение (webhook + /health)
    "uvicorn[standard]>=0.32", # ASGI-сервер для запуска моста
    "httpx>=0.27",          # async HTTP-клиент Telegram Bot API
    "structlog>=24.4",      # структурированное логирование
]

[project.optional-dependencies]
# Загрузка .env при ручном запуске (`uvicorn`). launchd передаёт env сам (см. plist),
# поэтому в проде python-dotenv не обязателен.
dotenv = ["python-dotenv>=1.0"]
# Инструменты разработки/тестов моста.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Мост — набор плоских модулей в этой папке, не пакет-директория.
include = ["app.py", "engine.py", "store.py", "telegram.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
